--- a/Inherited Property.html
+++ b/Inherited Property.html
@@ -68,71 +68,115 @@
 </section>
 
 
-<section class="inheritance-section">
-    <div class="inheritance-container">
+<!-- Inheriting a Home Section -->
+<section class="inheritance-custom-section">
+    <div class="inheritance-custom-container">
         <!-- Section 1: Introduction -->
-        <div class="inheritance-content">
-            <h2>Inheriting a Home: What You Need to Know About Selling It</h2>
-            <p>Inheriting a property can be both exciting and overwhelming, especially when you’re still dealing with the emotions of loss. Selling an inherited home comes with several steps and decisions, but by understanding the process, you can manage it efficiently and make the most of your situation.</p>
+        <div class="inheritance-custom-content">
+            <h2 class="inheritance-title">Inheriting a Home: What You Need to Know About Selling It</h2>
+            <p class="inheritance-paragraph">
+                Inheriting a property can be both exciting and overwhelming, especially when you’re still dealing with the emotions of loss. 
+                Selling an inherited home comes with several steps and decisions, but by understanding the process, 
+                you can manage it efficiently and make the most of your situation.
+            </p>
         </div>
 
         <!-- Section 2: Navigating the Inheritance Process -->
-        <div class="inheritance-process">
-            <div class="inheritance-text">
-                <h3>Navigating the Inheritance Process</h3>
-                <p>Inheriting a home often involves legal processes, the first of which is usually probate. Probate is the legal procedure that ensures the wishes of the deceased are carried out according to their will. Each state has its own probate rules, but typically, a court assigns an executor to manage the estate, ensuring assets are distributed as intended.</p>
-                <p>If you’re the sole beneficiary, the process can be simpler. However, if there are multiple beneficiaries, it’s important to come to an agreement on what to do with the property—whether to sell, lease, or buy out other parties involved.</p>
+        <div class="inheritance-custom-process">
+            <div class="inheritance-custom-text">
+                <h3 class="inheritance-heading">Navigating the Inheritance Process</h3>
+                <p class="inheritance-paragraph">
+                    Inheriting a home often involves legal processes, the first of which is usually probate. Probate is the legal procedure 
+                    that ensures the wishes of the deceased are carried out according to their will. Each state has its own probate rules, 
+                    but typically, a court assigns an executor to manage the estate, ensuring assets are distributed as intended.
+                </p>
+                <p class="inheritance-paragraph">
+                    If you’re the sole beneficiary, the process can be simpler. However, if there are multiple beneficiaries, it’s important 
+                    to come to an agreement on what to do with the property—whether to sell, lease, or buy out other parties involved.
+                </p>
             </div>
-            <div class="inheritance-image">
+            <div class="inheritance-custom-image">
                 <img src="assests/About Us 1.svg" alt="Navigating Probate Process">
             </div>
         </div>
 
         <!-- Section 3: Legal Steps Before Selling -->
-        <div class="inheritance-legal-steps">
-            <div class="inheritance-text">
-                <h3>Legal Steps Before Selling</h3>
-                <p>Before you can sell an inherited property, you'll need to ensure the title is transferred from the deceased to the current owner. This involves modifying the deed, which legally shows who owns the property. Once this is done, the home can be sold.</p>
-                <p>If the home has an outstanding mortgage, you'll also need to address any debts attached to the property. Inheriting a home may also mean inheriting the mortgage, so it's essential to discuss with the lender how to handle payments or pay off the loan entirely before proceeding with the sale.</p>
-            </div>
-            <div class="inheritance-image">
+        <div class="inheritance-custom-legal-steps">
+            <div class="inheritance-custom-image">
                 <img src="assests/About Us 1.svg" alt="Legal Steps">
+            </div>
+            <div class="inheritance-custom-text">
+                <h3 class="inheritance-heading">Legal Steps Before Selling</h3>
+                <p class="inheritance-paragraph">
+                    Before you can sell an inherited property, you'll need to ensure the title is transferred from the deceased to the current 
+                    owner. This involves modifying the deed, which legally shows who owns the property. Once this is done, the home can be sold.
+                </p>
+                <p class="inheritance-paragraph">
+                    If the home has an outstanding mortgage, you'll also need to address any debts attached to the property. Inheriting a home 
+                    may also mean inheriting the mortgage, so it's essential to discuss with the lender how to handle payments or pay off the loan entirely 
+                    before proceeding with the sale.
+                </p>
             </div>
         </div>
 
         <!-- Section 4: Determining the Value of the Property -->
-        <div class="inheritance-property-value">
-            <div class="inheritance-text">
-                <h3>Determining the Value of the Property</h3>
-                <p>Once the legal steps are in order, it’s time to figure out how much the home is worth. You can look at the sale prices of similar homes in the area to get a rough idea. A real estate agent can also help with this, but for a more accurate valuation, consider hiring a professional appraiser.</p>
-                <p>An appraisal provides a precise estimate of the home’s value, though it does come with a cost, typically ranging from $300 to $500 for a standard home. If repairs are necessary, you may need a second appraisal after the work is completed, potentially adding to the overall cost.</p>
+        <div class="inheritance-custom-property-value">
+            <div class="inheritance-custom-text">
+                <h3 class="inheritance-heading">Determining the Value of the Property</h3>
+                <p class="inheritance-paragraph">
+                    Once the legal steps are in order, it’s time to figure out how much the home is worth. You can look at the sale prices of 
+                    similar homes in the area to get a rough idea. A real estate agent can also help with this, but for a more accurate valuation, 
+                    consider hiring a professional appraiser.
+                </p>
+                <p class="inheritance-paragraph">
+                    An appraisal provides a precise estimate of the home’s value, though it does come with a cost, typically ranging from 
+                    $300 to $500 for a standard home. If repairs are necessary, you may need a second appraisal after the work is completed, 
+                    potentially adding to the overall cost.
+                </p>
             </div>
-            <div class="inheritance-image">
+            <div class="inheritance-custom-image">
                 <img src="assests/About Us 1.svg" alt="Property Value">
             </div>
         </div>
 
         <!-- Section 5: Understanding Taxes -->
-        <div class="inheritance-taxes">
-            <div class="inheritance-text">
-                <h3>Understanding Taxes</h3>
-                <p>When selling an inherited property, taxes can come into play, including capital gains tax and, in some states, inheritance tax. Whether or not you have to pay these taxes depends on the home’s value and other factors. If you’ve lived in the property for two of the past five years, you may qualify for a Section 121 exclusion, allowing you to avoid paying taxes on up to $250,000 (or $500,000 for a married couple) of the sale.</p>
-                <p>It’s important to consult a tax professional to understand what taxes may apply in your situation and how to minimize your liability.</p>
-            </div>
-            <div class="inheritance-image">
+        <div class="inheritance-custom-taxes">
+            <div class="inheritance-custom-image">
                 <img src="assests/About Us 1.svg" alt="Understanding Taxes">
+            </div>
+            <div class="inheritance-custom-text">
+                <h3 class="inheritance-heading">Understanding Taxes</h3>
+                <p class="inheritance-paragraph">
+                    When selling an inherited property, taxes can come into play, including capital gains tax and, in some states, inheritance tax. 
+                    Whether or not you have to pay these taxes depends on the home’s value and other factors. If you’ve lived in the property for two 
+                    of the past five years, you may qualify for a Section 121 exclusion, allowing you to avoid paying taxes on up to $250,000 
+                    (or $500,000 for a married couple) of the sale.
+                </p>
+                <p class="inheritance-paragraph">
+                    It’s important to consult a tax professional to understand what taxes may apply in your situation and how to minimize your liability.
+                </p>
             </div>
         </div>
 
         <!-- Section 6: Putting the Home on the Market -->
-        <div class="inheritance-selling">
-            <div class="inheritance-text">
-                <h3>Putting the Home on the Market</h3>
-                <p>After determining the value and addressing legal and tax considerations, it’s time to list the property. A real estate agent can guide you through the process of selling an inherited home, including working with probate issues and managing any trust or deed transfers.</p>
-                <p>When selling a home through traditional methods, it’s important to keep the property in good condition. Cleanliness, good presentation, and professional photos can attract more buyers and increase the sale price.</p>
-                <p>However, if you’re looking for a quicker and simpler sale, you might consider a cash offer. Cash buyers, like GIGI Buys Homes, can make the process fast and hassle-free. While cash offers may be lower than market value, they eliminate the need for repairs, reduce risks, and save you from additional costs, providing a convenient solution when time is of the essence.</p>
+        <div class="inheritance-custom-selling">
+            <div class="inheritance-custom-text">
+                <h3 class="inheritance-heading">Putting the Home on the Market</h3>
+                <p class="inheritance-paragraph">
+                    After determining the value and addressing legal and tax considerations, it’s time to list the property. A real estate agent can guide 
+                    you through the process of selling an inherited home, including working with probate issues and managing any trust or deed transfers.
+                </p>
+                <p class="inheritance-paragraph">
+                    When selling a home through traditional methods, it’s important to keep the property in good condition. Cleanliness, good presentation, 
+                    and professional photos can attract more buyers and increase the sale price.
+                </p>
+                <p class="inheritance-paragraph">
+                    However, if you’re looking for a quicker and simpler sale, you might consider a cash offer. Cash buyers, like GIGI Buys Homes, can make the process 
+                    fast and hassle-free. While cash offers may be lower than market value, they eliminate the need for repairs, reduce risks, and save you from 
+                    additional costs, providing a convenient solution when time is of the essence.
+                </p>
             </div>
-            <div class="inheritance-image">
+            <div class="inheritance-custom-image">
                 <img src="assests/About Us 1.svg" alt="Selling Home">
             </div>
         </div>
