--- a/Inherited Property.html
+++ b/Inherited Property.html
@@ -139,6 +139,8 @@
             </div>
         </div>
 
+    
+
         <!-- Section 5: Understanding Taxes -->
         <div class="inheritance-custom-taxes">
             <div class="inheritance-custom-image">
@@ -183,8 +185,40 @@
     </div>
 </section>
 
+<!-- Section with White Background and Image Overlay -->
+<section class="value-section">
+    <div class="image-overlay-box">
+      <img src="assests/About Us 2.svg" alt="Money Image" class="center-image">
+      <div class="text-overlay">
+        <h2>Determining the Value of Your Inherited Property</h2>
+        <p>
+          Once you've resolved any immediate issues and decided on the next steps for the inherited home, the next priority is to determine its value. A good starting point is to research similar homes in the area to see what they’re currently selling for, as well as recent sale prices. In some cases, the estate trustee may already have this information.
+        </p>
+        <p>
+          For the most accurate valuation, it's recommended to hire a professional appraiser. Appraisers have specialized training and experience that real estate agents might not, enabling them to provide a more precise assessment of the property’s worth. However, this service comes with a fee.
+        </p>
+        <p>
+          The typical cost for an appraisal of a single-family home or condo ranges from $300 to $500, depending on the region. For larger or more complex properties, the cost may be higher.
+        </p>
+      </div>
+    </div>
+</section>
 
-
+<!-- Enhanced Conclusion Section -->
+<section class="conclusion-section">
+    <div class="conclusion-box">
+        <div class="step-indicator">
+            <span class="step-number">Conclusion</span>
+        </div>
+        <p class="conclusion-text">
+            Inheriting a property can be both an emotional and exciting experience. Whether you're selling the property on your own or with other beneficiaries, there are several factors to consider before listing it on the market. Each state has its own legal requirements and tax implications, which means the process can vary from one situation to another.
+            <br> Hiring professionals, such as a realtor or appraiser, can help ensure you get the best value for your property. If your priority is to sell quickly, a cash offer from companies like GIGI Buys Homes is an option that allows you to settle the sale in days rather than months, though typically at a discount to the market value. <br> Whatever path you choose, it’s important to explore all your options carefully before making any final decisions. These considerations can significantly impact the outcome and your financial future.
+        </p>
+        <div class="conclusion-call-to-action">
+            <a href="#" class="btn conclusion-btn">Contact Us Today for Support</a>
+        </div>
+    </div>
+</section>
 
 
 
