--- a/Apartment Blocks.html
+++ b/Apartment Blocks.html
@@ -61,7 +61,7 @@
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="homeWeBuyDropdown">
                         <li><a class="dropdown-item" href="Apartment Blocks.html">Apartment Blocks</a></li>
-                        <li><a class="dropdown-item" href="#">Condos</a></li>
+                        <li><a class="dropdown-item" href="Condos.html">Condos</a></li>
                         <li><a class="dropdown-item" href="#">Single Family Homes</a></li>
                         <li><a class="dropdown-item" href="#">Townhouses</a></li>
                     </ul>
