--- a/Facing Foreclosure.html
+++ b/Facing Foreclosure.html
@@ -17,6 +17,7 @@
 
 
 
+<!-- Fixed Navbar -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-black fixed-top">
     <div class="container">
         <a class="navbar-brand" href="index.html">
@@ -33,8 +34,10 @@
                         Home We Buy
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="homeWeBuyDropdown">
-                        <li><a class="dropdown-item" href="#">Option 1</a></li>
-                        <li><a class="dropdown-item" href="#">Option 2</a></li>
+                        <li><a class="dropdown-item" href="Apartment Blocks.html">Apartment Blocks</a></li>
+                        <li><a class="dropdown-item" href="Condos.html">Condos</a></li>
+                        <li><a class="dropdown-item" href="#">Single Family Homes</a></li>
+                        <li><a class="dropdown-item" href="#">Townhouses</a></li>
                     </ul>
                 </li>
                 <li class="nav-item dropdown">
@@ -45,7 +48,7 @@
                         <li><a class="dropdown-item" href="Facing Foreclosure.html">Facing Foreclosure</a></li>
                         <li><a class="dropdown-item" href="divorce and seperation.html">Divorce or Separation</a></li>
                         <li><a class="dropdown-item" href="Inherited Property.html">Inherited Property</a></li>
-                        <li><a class="dropdown-item" href="#">Financial Difficulties</a></li>
+                        <li><a class="dropdown-item" href="Financial Difficulties.html">Financial Difficulties</a></li>
                         <li><a class="dropdown-item" href="#">Relocation</a></li>
                         <li><a class="dropdown-item" href="#">Homes Needing Repairs</a></li>
                     </ul>
