--- a/Inherited Property.html
+++ b/Inherited Property.html
@@ -17,6 +17,7 @@
 
 
 
+<!-- Fixed Navbar -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-black fixed-top">
     <div class="container">
         <a class="navbar-brand" href="index.html">
@@ -34,7 +35,7 @@
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="homeWeBuyDropdown">
                         <li><a class="dropdown-item" href="Apartment Blocks.html">Apartment Blocks</a></li>
-                        <li><a class="dropdown-item" href="#">Condos</a></li>
+                        <li><a class="dropdown-item" href="Condos.html">Condos</a></li>
                         <li><a class="dropdown-item" href="#">Single Family Homes</a></li>
                         <li><a class="dropdown-item" href="#">Townhouses</a></li>
                     </ul>
