--- a/divorce and seperation.html
+++ b/divorce and seperation.html
@@ -17,48 +17,49 @@
 
 
 
+<!-- Fixed Navbar -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-black fixed-top">
-    <div class="container">
-        <a class="navbar-brand" href="index.html">
-            <img src="assests/GIGI Logo.svg" alt="GIGI Buys Homes" href="index.html" class="logo">
-        </a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav ms-auto">
-                <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="homeWeBuyDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                        Home We Buy
-                    </a>
-                    <ul class="dropdown-menu" aria-labelledby="homeWeBuyDropdown">
+  <div class="container">
+      <a class="navbar-brand" href="index.html">
+          <img src="assests/GIGI Logo.svg" alt="GIGI Buys Homes" href="index.html" class="logo">
+      </a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav ms-auto">
+              <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+              <li class="nav-item dropdown">
+                  <a class="nav-link dropdown-toggle" href="#" id="homeWeBuyDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                      Home We Buy
+                  </a>
+                  <ul class="dropdown-menu" aria-labelledby="homeWeBuyDropdown">
                       <li><a class="dropdown-item" href="Apartment Blocks.html">Apartment Blocks</a></li>
-                      <li><a class="dropdown-item" href="#">Condos</a></li>
+                      <li><a class="dropdown-item" href="Condos.html">Condos</a></li>
                       <li><a class="dropdown-item" href="#">Single Family Homes</a></li>
                       <li><a class="dropdown-item" href="#">Townhouses</a></li>
                   </ul>
-                </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="whySellDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                        Why Sell?
-                    </a>
-                    <ul class="dropdown-menu" aria-labelledby="whySellDropdown">
-                        <li><a class="dropdown-item" href="Facing Foreclosure.html">Facing Foreclosure</a></li>
-                        <li><a class="dropdown-item" href="divorce and seperation.html">Divorce or Separation</a></li>
-                        <li><a class="dropdown-item" href="Inherited Property.html">Inherited Property</a></li>
-                        <li><a class="dropdown-item" href="Financial Difficulties.html">Financial Difficulties</a></li>
-                        <li><a class="dropdown-item" href="#">Relocation</a></li>
-                        <li><a class="dropdown-item" href="#">Homes Needing Repairs</a></li>
-                    </ul>
-                </li>
-                <li class="nav-item"><a class="nav-link" href="#">How It Works</a></li>
-                <li class="nav-item"><a class="nav-link" href="#">About Us</a></li>
-                <li class="nav-item"><a class="nav-link" href="#">Contact Us</a></li>
-            </ul>
-            <a href="#" class="btn btn-warning ms-3">Sell Now</a>
-        </div>
-    </div>
+              </li>
+              <li class="nav-item dropdown">
+                  <a class="nav-link dropdown-toggle" href="#" id="whySellDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                      Why Sell?
+                  </a>
+                  <ul class="dropdown-menu" aria-labelledby="whySellDropdown">
+                      <li><a class="dropdown-item" href="Facing Foreclosure.html">Facing Foreclosure</a></li>
+                      <li><a class="dropdown-item" href="divorce and seperation.html">Divorce or Separation</a></li>
+                      <li><a class="dropdown-item" href="Inherited Property.html">Inherited Property</a></li>
+                      <li><a class="dropdown-item" href="Financial Difficulties.html">Financial Difficulties</a></li>
+                      <li><a class="dropdown-item" href="#">Relocation</a></li>
+                      <li><a class="dropdown-item" href="#">Homes Needing Repairs</a></li>
+                  </ul>
+              </li>
+              <li class="nav-item"><a class="nav-link" href="#">How It Works</a></li>
+              <li class="nav-item"><a class="nav-link" href="#">About Us</a></li>
+              <li class="nav-item"><a class="nav-link" href="#">Contact Us</a></li>
+          </ul>
+          <a href="#" class="btn btn-warning ms-3">Sell Now</a>
+      </div>
+  </div>
 </nav>
 
 
