--- a/Condos.html
+++ b/Condos.html
@@ -114,12 +114,6 @@
                 </div> -->
 
                 <p>At GIGI Buys Homes, we understand the unique challenges that come with selling a condo, and we're dedicated to making the process as smooth and stress-free as possible. Whether you need to sell quickly due to a change in circumstances or want to bypass the complexities of the traditional market, you can count on us to provide a fast, fair, and simple solution.
-
-
-
-
-
-
                 </p>
 
                 <!-- <div class="gigi-bg">
@@ -155,8 +149,7 @@
 
 
 <!-- Sell Your Condo Page Content -->
-<!-- Sell Your Condo Page Content -->
-<div class="content-wrapper">
+<div class="condos-content-wrapper">
     <section class="process-section">
         <h2 class="condos-hero-section-title">Our Streamlined Process for Selling Your Condo</h2>
         <div class="steps-container">
@@ -185,7 +178,7 @@
         <h2 class="what-is-condo-section-title">What is a Condo?</h2>
         <div class="condo-info">
             <p>A condominium, or condo, is a type of real estate where individual units are privately owned, but shared spaces—like hallways, pools, and recreation areas—are collectively owned by all the condo owners within the complex. Condos offer a unique combination of homeownership and community living, providing residents with the privacy of owning their unit while enjoying amenities without the hassle of maintaining them.</p>
-            <img src="path/to/condo-image.jpg" alt="Condo Living" class="condo-image">
+            <img src="YT Thumbnail.svg" alt="Condo Living" class="condo-image">
         </div>
     </section>
 
@@ -262,6 +255,7 @@
         <p>Contact GIGI Buys Homes today to start the process. We’re here to help you make a smooth transition and provide the support you need for a stress-free sale!</p>
     </section>
 </div>
+
 
 
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
